--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,6 @@ jobs:
             cd ~
             docker pull $BACKEND_IMAGE:latest
             docker pull $FRONTEND_IMAGE:latest
-            docker compose down
-            docker compose up -d
+            docker-compose down
+            docker-compose up -d
           EOF
