chore: implementing gh actions 81

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > ec2_key.pem
           chmod 600 ec2_key.pem
-          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ubuntu@44.202.243.182 << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ubuntu@44.202.243.182 << EOF
             cd ~
             docker pull $BACKEND_IMAGE:latest
             docker pull $FRONTEND_IMAGE:latest
