chore: implementing gh actions 82

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,17 +17,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 🔐 Log in to Docker Hub
+      # 🔐 Log in to Docker Hub on GitHub runner (for build & push)
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      # 🧱 Build and push backend
+      # 🧱 Build and push backend image
       - name: Build and push backend image
         run: |
           docker build -t $BACKEND_IMAGE:latest ./backend
           docker push $BACKEND_IMAGE:latest
 
-      # 🧱 Build and push frontend
+      # 🧱 Build and push frontend image
       - name: Build and push frontend image
         run: |
           docker build -t $FRONTEND_IMAGE:latest ./frontend
@@ -39,7 +39,7 @@ jobs:
           echo "${{ secrets.EC2_SSH_KEY }}" > ec2_key.pem
           chmod 600 ec2_key.pem
           ssh -o StrictHostKeyChecking=no -i ec2_key.pem ubuntu@44.202.243.182 << EOF
-            cd ~
+            echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
             docker pull $BACKEND_IMAGE:latest
             docker pull $FRONTEND_IMAGE:latest
             docker-compose down
